Change page loading

--- a/web/index.html
+++ b/web/index.html
@@ -31,16 +31,47 @@
 
     <style type="text/css">
 
-    #loading_indicator {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
+        .loading {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+    }
+
+    .loader {
+      border: 4px solid #f3f3f3;
+      border-radius: 50%;
+      border-top: 4px solid blue;
+      border-right: 4px solid green;
+      border-bottom: 4px solid red;
+      border-left: 4px solid purple;
+      width: 120px;
+      height: 120px;
+      -webkit-animation: spin 2s linear infinite;
+      animation: spin 2s linear infinite;
+    }
+
+    @-webkit-keyframes spin {
+      0% {
+        -webkit-transform: rotate(0deg);
+      }
+      100% {
+        -webkit-transform: rotate(360deg);
+      }
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
     }
 
     </style>
@@ -48,11 +79,9 @@
     <title>Portal Puzzle</title>
     <link rel="manifest" href="manifest.json">
 </head>
-<body>
-<div id="loading_indicator">
-    <object type="image/svg+xml" data="ba2.svg">
-        <img src="ba2.svg">
-    </object>
+<body style="background-color:#BFDBFE">
+<div class="loading">
+    <div class="loader"></div>
 </div>
 <!-- This script installs service_worker.js to provide PWA functionality to
      application. For more information, see:
@@ -131,7 +160,7 @@
 <script>
     window.onload = function () {
         setTimeout(function () {
-          var loadingIndicator = document.getElementById("loading_indicator");
+          var loadingIndicator = document.getElementByClassName("loading");
           if (loadingIndicator) {
             loadingIndicator.remove();
           }
